--- a/Packs/SandBlastAppliance/Integrations/CheckPointSandblastAppliance/CheckPointSandblastAppliance.yml
+++ b/Packs/SandBlastAppliance/Integrations/CheckPointSandblastAppliance/CheckPointSandblastAppliance.yml
@@ -1,3 +1,5 @@
+deprecated: true
+description: Deprecated. Use Check Point Threat Emulation (SandBlast) instead.
 commonfields:
   id: Check Point Sandblast Appliance
   version: -1
